# jigi

./: .gitignore  Application.md  Cargo.toml  README.md  Seo.md
.github/workflows/: lint.yml  test.yml
src/: application.rs  helpers.rs  lib.rs  main.rs
src/capsules/: mod.rs
src/seo/: mod.rs
